--- a/archive.html
+++ b/archive.html
@@ -1,7 +1,7 @@
 ---
-title: Archive
+title: blog
 layout: default
-description: "「我干了什么 究竟拿了时间换了什么」"
+description: "「生命中有万事的可能」"
 header-img: "img/bg-little-universe.jpg"
 ---
 
